# PJSK-Sticker-API

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  ci.py  docker-compose.yml  pyproject.toml
.github/workflows/: auto-assign.yml  ci-cd.yml
assets/: character_colors.json  character_stickers.json  characters.json
pjsk_sticker/: generator.py
